# Podcast-Buddy

./: .env.example  .gitignore  README.md  data.json  pyproject.toml  readme.md  requirements.txt
podcast_buddy/: __init__.py  ai_chat.py  cli.py  config.py  episode.py  news.py  script.py  storage.py  summarizer.py  test_model.py  train_model.py  web.py
podcast_buddy/static/: app.js  index.html  styles.css
tests/: test_news.py  test_storage.py  test_summarizer.py
tests/fixtures/: sample_serpapi_news.json  training_data.json
