[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-buddy"
version = "0.1.0"
description = "Create AI-hosted news podcast scripts from SerpAPI Google News results using free/open-source summarization."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Podcast Buddy" }]
dependencies = []

[project.optional-dependencies]
models = [
  "torch>=2.2",
  "transformers>=4.57,<6",
]

[project.scripts]
podcast-buddy = "podcast_buddy.cli:main"
podcast-buddy-web = "podcast_buddy.web:main"

[tool.setuptools.packages.find]
include = ["podcast_buddy*"]
